# ClipXForceRecorder

./: .gitignore  Makefile  README.md  pyclipx.py  pyproject.toml  recorder.py  recorder_test.py  settings.toml
clipx_force_recorder/: __init__.py  __main__.py  api.py  clipx_api.py  file_writer.py  force_sensor.py
matlab/ClipXMatlab-driver/: ClipXMatlab.m  ClipXMatlabStore.m  getName.m  signalSelector.m
pyclipx/: ClipX_Interface.h  clipx.py  clipx_api.py  pyclipx.py  pyclipx_ai.py  pyproject.toml
src/: ClipX.h  main.cpp  settings.cpp  settings.h  utils.cpp  utils.h
src/clipx_force_recorder/: __init__.py  __main__.py  api.py  file_writer.py  force_sensor.py  lsl.py  recorder.py  settings.py  time_stamped_data.py
