[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[project]
name = "clipx-force-recorder"
version = "0.1.1"
description = "Recording and streaming ClipX Force Sensors with Python and Lab Streaming Layer (LSL)."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12, <3.14"
dependencies = [
    "readkeys>=1.0",
    "pylsl>=1.17",
    "numpy>=2.5.1",
    "tomlkit>=0.15.1",
]

[project.scripts]
clipx_force_recorder = "clipx_force_recorder.__main__:run"

[project.urls]
Documentation = "https://github.com/lindemann09/ClipXForceRecorder"
Source = "https://github.com/lindemann09/ClipXForceRecorder"

